<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="movies">MOVIES</string>
    <string name="tvshows">TV SHOWS</string>
    <string name="search">Search</string>
    <string name="original_language">Original Language</string>
    <string name="error_image">error image</string>
    <string name="no_data_message">No Data!</string>
    <string name="title_movie">Movies</string>
    <string name="title_tv">TV Shows</string>
    <string name="title_favorite">Favorites</string>
    <string name="favorite">Favorite</string>
</resources>